Launchpad automatic translations update.

--- a/po/stellarium-skycultures/cs.po
+++ b/po/stellarium-skycultures/cs.po
@@ -8,13 +8,13 @@ msgstr ""
 "Project-Id-Version: stellarium\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2012-11-20 09:48+0700\n"
-"PO-Revision-Date: 2012-10-28 09:40+0000\n"
-"Last-Translator: Alexander Wolf <Unknown>\n"
+"PO-Revision-Date: 2012-11-21 09:11+0000\n"
+"Last-Translator: Zbyněk Schwarz <Unknown>\n"
 "Language-Team: Czech <cs@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2012-11-21 04:39+0000\n"
+"X-Launchpad-Export-Date: 2012-11-22 04:44+0000\n"
 "X-Generator: Launchpad (build 16293)\n"
 
 #: nebulae/default/ngc2000names.dat:112
@@ -31,7 +31,7 @@ msgstr "Barnardova galaxie"
 
 #: nebulae/default/ngc2000names.dat:116
 msgid "Bear's Paw galaxy"
-msgstr ""
+msgstr "Glaxie medvědí tlapy"
 
 #: nebulae/default/ngc2000names.dat:117
 msgid "Beehive cluster"
@@ -59,7 +59,7 @@ msgstr "Bodeova mlhovina"
 
 #: nebulae/default/ngc2000names.dat:123
 msgid "Cigar Galaxy"
-msgstr ""
+msgstr "Galaxie doutníku"
 
 #: nebulae/default/ngc2000names.dat:124 nebulae/default/ngc2000names.dat:125
 #: nebulae/default/ngc2000names.dat:126 nebulae/default/ngc2000names.dat:127
@@ -191,7 +191,7 @@ msgstr "Mlhovina přesýpacích hodin"
 
 #: nebulae/default/ngc2000names.dat:166
 msgid "Hubble's variable nebula"
-msgstr ""
+msgstr "Hubbleova proměnná mlhovina"
 
 #: nebulae/default/ngc2000names.dat:167
 msgid "Jewel Box"
@@ -370,7 +370,7 @@ msgstr "Mlhovina λ Cen"
 
 #: nebulae/default/ngc2000names.dat:223
 msgid "ω Cen cluster"
-msgstr ""
+msgstr "Hvězdokupa ω Centauri"
 
 #: nebulae/default/ngc2000names.dat:224
 msgid "ρ Oph nebula"
@@ -378,55 +378,55 @@ msgstr "Mlhovina ρ Oph"
 
 #: nebulae/default/ngc2000names.dat:225
 msgid "Rim nebula"
-msgstr ""
+msgstr "Okrajová mlhovina"
 
 #: nebulae/default/ngc2000names.dat:226
 msgid "Cat's Paw nebula"
-msgstr ""
+msgstr "Mlhovina kočičí tlapky"
 
 #: nebulae/default/ngc2000names.dat:227
 msgid "War and Peace nebula"
-msgstr ""
+msgstr "Mlhovina Vojna a mír"
 
 #: nebulae/default/ngc2000names.dat:228
 msgid "Little Ghost nebula"
-msgstr ""
+msgstr "Mlhovina malého ducha"
 
 #: nebulae/default/ngc2000names.dat:229
 msgid "Little Gem nebula"
-msgstr ""
+msgstr "Mlhovina Malého klenotu"
 
 #: nebulae/default/ngc2000names.dat:230
 msgid "Perseus A"
-msgstr ""
+msgstr "Perseus A"
 
 #: nebulae/default/ngc2000names.dat:231
 msgid "Fornax A"
-msgstr ""
+msgstr "Fornax A"
 
 #: nebulae/default/ngc2000names.dat:232
 msgid "Fornax B"
-msgstr ""
+msgstr "Fornax B"
 
 #: nebulae/default/ngc2000names.dat:233
 msgid "de Mairan's nebula"
-msgstr ""
+msgstr "De Mairanova mlhovina"
 
 #: nebulae/default/ngc2000names.dat:234
 msgid "Flame nebula"
-msgstr ""
+msgstr "Ohnivá mlhovina"
 
 #: nebulae/default/ngc2000names.dat:235
 msgid "Satellite cluster"
-msgstr ""
+msgstr "Hvězdokupa satelitů"
 
 #: nebulae/default/ngc2000names.dat:236
 msgid "Thor's Helmet"
-msgstr ""
+msgstr "Thorova přilba"
 
 #: nebulae/default/ngc2000names.dat:237
 msgid "Caroline's cluster"
-msgstr ""
+msgstr "Carolinina hvězdokupa"
 
 #: nebulae/default/ngc2000names.dat:238
 msgid "τ Canis Majoris cluster"
@@ -434,27 +434,27 @@ msgstr ""
 
 #: nebulae/default/ngc2000names.dat:239
 msgid "Pencil nebula"
-msgstr ""
+msgstr "Tužková mlhovina"
 
 #: nebulae/default/ngc2000names.dat:240
 msgid "Supernova Factory"
-msgstr ""
+msgstr "Továrna na supernovy"
 
 #: nebulae/default/ngc2000names.dat:241
 msgid "Galaxy cluster"
-msgstr ""
+msgstr "Hvězdokupa galaxií"
 
 #: nebulae/default/ngc2000names.dat:242
 msgid "Southern Pinwheel galaxy"
-msgstr ""
+msgstr "Galaxie jižního větrníku"
 
 #: nebulae/default/ngc2000names.dat:243
 msgid "Pinwheel galaxy"
-msgstr ""
+msgstr "Galaxie větrníku"
 
 #: nebulae/default/ngc2000names.dat:244
 msgid "Atoms for Peace galaxy"
-msgstr ""
+msgstr "Galaxie Atomů pro mír"
 
 #: nebulae/default/ngc2000names.dat:245
 msgid "Grand Design galaxy"
