--- a/po/stellarium-skycultures/en_GB.po
+++ b/po/stellarium-skycultures/en_GB.po
@@ -8,13 +8,13 @@ msgstr ""
 "Project-Id-Version: stellarium\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2012-11-20 09:48+0700\n"
-"PO-Revision-Date: 2012-10-28 09:43+0000\n"
-"Last-Translator: Alexander Wolf <Unknown>\n"
+"PO-Revision-Date: 2012-11-21 14:17+0000\n"
+"Last-Translator: Alexander Mackinnon Jansen <alexander.jansen@hesbynett.no>\n"
 "Language-Team: English (United Kingdom) <en_GB@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2012-11-21 04:45+0000\n"
+"X-Launchpad-Export-Date: 2012-11-22 04:45+0000\n"
 "X-Generator: Launchpad (build 16293)\n"
 
 #: nebulae/default/ngc2000names.dat:112
@@ -31,7 +31,7 @@ msgstr "Barnard's galaxy"
 
 #: nebulae/default/ngc2000names.dat:116
 msgid "Bear's Paw galaxy"
-msgstr ""
+msgstr "Bear's Paw galaxy"
 
 #: nebulae/default/ngc2000names.dat:117
 msgid "Beehive cluster"
@@ -191,7 +191,7 @@ msgstr "Hourglass nebula"
 
 #: nebulae/default/ngc2000names.dat:166
 msgid "Hubble's variable nebula"
-msgstr ""
+msgstr "Hubble's variable nebula"
 
 #: nebulae/default/ngc2000names.dat:167
 msgid "Jewel Box"
@@ -370,7 +370,7 @@ msgstr "λ Cen nebula"
 
 #: nebulae/default/ngc2000names.dat:223
 msgid "ω Cen cluster"
-msgstr ""
+msgstr "ω Cen cluster"
 
 #: nebulae/default/ngc2000names.dat:224
 msgid "ρ Oph nebula"
@@ -378,87 +378,87 @@ msgstr "ρ Oph nebula"
 
 #: nebulae/default/ngc2000names.dat:225
 msgid "Rim nebula"
-msgstr ""
+msgstr "Rim nebula"
 
 #: nebulae/default/ngc2000names.dat:226
 msgid "Cat's Paw nebula"
-msgstr ""
+msgstr "Cat's Paw nebula"
 
 #: nebulae/default/ngc2000names.dat:227
 msgid "War and Peace nebula"
-msgstr ""
+msgstr "War and Peace nebula"
 
 #: nebulae/default/ngc2000names.dat:228
 msgid "Little Ghost nebula"
-msgstr ""
+msgstr "Little Ghost nebula"
 
 #: nebulae/default/ngc2000names.dat:229
 msgid "Little Gem nebula"
-msgstr ""
+msgstr "Little Gem nebula"
 
 #: nebulae/default/ngc2000names.dat:230
 msgid "Perseus A"
-msgstr ""
+msgstr "Perseus A"
 
 #: nebulae/default/ngc2000names.dat:231
 msgid "Fornax A"
-msgstr ""
+msgstr "Fornax A"
 
 #: nebulae/default/ngc2000names.dat:232
 msgid "Fornax B"
-msgstr ""
+msgstr "Fornax B"
 
 #: nebulae/default/ngc2000names.dat:233
 msgid "de Mairan's nebula"
-msgstr ""
+msgstr "de Mairan's nebula"
 
 #: nebulae/default/ngc2000names.dat:234
 msgid "Flame nebula"
-msgstr ""
+msgstr "Flame nebula"
 
 #: nebulae/default/ngc2000names.dat:235
 msgid "Satellite cluster"
-msgstr ""
+msgstr "Satellite cluster"
 
 #: nebulae/default/ngc2000names.dat:236
 msgid "Thor's Helmet"
-msgstr ""
+msgstr "Thor's Helmet"
 
 #: nebulae/default/ngc2000names.dat:237
 msgid "Caroline's cluster"
-msgstr ""
+msgstr "Caroline's cluster"
 
 #: nebulae/default/ngc2000names.dat:238
 msgid "τ Canis Majoris cluster"
-msgstr ""
+msgstr "τ Canis Majoris cluster"
 
 #: nebulae/default/ngc2000names.dat:239
 msgid "Pencil nebula"
-msgstr ""
+msgstr "Pencil nebula"
 
 #: nebulae/default/ngc2000names.dat:240
 msgid "Supernova Factory"
-msgstr ""
+msgstr "Supernova Factory"
 
 #: nebulae/default/ngc2000names.dat:241
 msgid "Galaxy cluster"
-msgstr ""
+msgstr "Galaxy cluster"
 
 #: nebulae/default/ngc2000names.dat:242
 msgid "Southern Pinwheel galaxy"
-msgstr ""
+msgstr "Southern Pinwheel galaxy"
 
 #: nebulae/default/ngc2000names.dat:243
 msgid "Pinwheel galaxy"
-msgstr ""
+msgstr "Pinwheel galaxy"
 
 #: nebulae/default/ngc2000names.dat:244
 msgid "Atoms for Peace galaxy"
-msgstr ""
+msgstr "Atoms for Peace galaxy"
 
 #: nebulae/default/ngc2000names.dat:245
 msgid "Grand Design galaxy"
-msgstr ""
+msgstr "Grand Design galaxy"
 
 #: skycultures/arabic/constellation_names.eng.fab:1
 msgid "The Shackled Woman"
