--- a/po/stellarium-skycultures/es.po
+++ b/po/stellarium-skycultures/es.po
@@ -10,13 +10,13 @@ msgstr ""
 "Project-Id-Version: es\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2012-11-20 09:48+0700\n"
-"PO-Revision-Date: 2012-10-29 07:30+0000\n"
+"PO-Revision-Date: 2012-11-22 03:35+0000\n"
 "Last-Translator: José A. Macas Durazo <josedurazo92@gmail.com>\n"
 "Language-Team: \n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2012-11-21 04:44+0000\n"
+"X-Launchpad-Export-Date: 2012-11-22 04:44+0000\n"
 "X-Generator: Launchpad (build 16293)\n"
 "X-Poedit-Country: SPAIN\n"
 "X-Poedit-Language: Spanish\n"
@@ -35,7 +35,7 @@ msgstr "Galaxia de Barnard"
 
 #: nebulae/default/ngc2000names.dat:116
 msgid "Bear's Paw galaxy"
-msgstr ""
+msgstr "Galaxia Pata del Oso"
 
 #: nebulae/default/ngc2000names.dat:117
 msgid "Beehive cluster"
@@ -195,7 +195,7 @@ msgstr "Neblosa Reloj de arena"
 
 #: nebulae/default/ngc2000names.dat:166
 msgid "Hubble's variable nebula"
-msgstr ""
+msgstr "Nebulosa variable de Hubble"
 
 #: nebulae/default/ngc2000names.dat:167
 msgid "Jewel Box"
@@ -374,7 +374,7 @@ msgstr "Nebulosa de Lambda Centauro"
 
 #: nebulae/default/ngc2000names.dat:223
 msgid "ω Cen cluster"
-msgstr ""
+msgstr "Cúmulo ω Cen"
 
 #: nebulae/default/ngc2000names.dat:224
 msgid "ρ Oph nebula"
@@ -382,19 +382,19 @@ msgstr "Nebulosa de Ro Ofiuco"
 
 #: nebulae/default/ngc2000names.dat:225
 msgid "Rim nebula"
-msgstr ""
+msgstr "Nebulosa Rin"
 
 #: nebulae/default/ngc2000names.dat:226
 msgid "Cat's Paw nebula"
-msgstr ""
+msgstr "Nebulosa Pata del Gato"
 
 #: nebulae/default/ngc2000names.dat:227
 msgid "War and Peace nebula"
-msgstr ""
+msgstr "Nebulosa Guerra y Paz"
 
 #: nebulae/default/ngc2000names.dat:228
 msgid "Little Ghost nebula"
-msgstr ""
+msgstr "Nebulosa del Pequeño Fantasma"
 
 #: nebulae/default/ngc2000names.dat:229
 msgid "Little Gem nebula"
@@ -402,59 +402,59 @@ msgstr ""
 
 #: nebulae/default/ngc2000names.dat:230
 msgid "Perseus A"
-msgstr ""
+msgstr "Perseo A"
 
 #: nebulae/default/ngc2000names.dat:231
 msgid "Fornax A"
-msgstr ""
+msgstr "Fornax A"
 
 #: nebulae/default/ngc2000names.dat:232
 msgid "Fornax B"
-msgstr ""
+msgstr "Fornax B"
 
 #: nebulae/default/ngc2000names.dat:233
 msgid "de Mairan's nebula"
-msgstr ""
+msgstr "Nebulosa de De Mairan"
 
 #: nebulae/default/ngc2000names.dat:234
 msgid "Flame nebula"
-msgstr ""
+msgstr "Nebulosa de la Flama"
 
 #: nebulae/default/ngc2000names.dat:235
 msgid "Satellite cluster"
-msgstr ""
+msgstr "Cúmulo Satélite"
 
 #: nebulae/default/ngc2000names.dat:236
 msgid "Thor's Helmet"
-msgstr ""
+msgstr "Casco de Thor"
 
 #: nebulae/default/ngc2000names.dat:237
 msgid "Caroline's cluster"
-msgstr ""
+msgstr "Cúmulo de Caroline"
 
 #: nebulae/default/ngc2000names.dat:238
 msgid "τ Canis Majoris cluster"
-msgstr ""
+msgstr "Cúmulo τ Can Mayor"
 
 #: nebulae/default/ngc2000names.dat:239
 msgid "Pencil nebula"
-msgstr ""
+msgstr "Nebulosa Lápiz"
 
 #: nebulae/default/ngc2000names.dat:240
 msgid "Supernova Factory"
-msgstr ""
+msgstr "Fábrica de Supernovas"
 
 #: nebulae/default/ngc2000names.dat:241
 msgid "Galaxy cluster"
-msgstr ""
+msgstr "Cúmulo de galaxias"
 
 #: nebulae/default/ngc2000names.dat:242
 msgid "Southern Pinwheel galaxy"
-msgstr ""
+msgstr "Galaxia del Molinete del Sur"
 
 #: nebulae/default/ngc2000names.dat:243
 msgid "Pinwheel galaxy"
-msgstr ""
+msgstr "Galaxia del Molinete"
 
 #: nebulae/default/ngc2000names.dat:244
 msgid "Atoms for Peace galaxy"
@@ -462,7 +462,7 @@ msgstr ""
 
 #: nebulae/default/ngc2000names.dat:245
 msgid "Grand Design galaxy"
-msgstr ""
+msgstr "Galaxia Gran Diseño"
 
 #: skycultures/arabic/constellation_names.eng.fab:1
 msgid "The Shackled Woman"
