Launchpad automatic translations update.

--- a/po/stellarium/nb.po
+++ b/po/stellarium/nb.po
@@ -9,13 +9,13 @@ msgstr ""
 "Project-Id-Version: nb\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2012-11-12 16:17+0200\n"
-"PO-Revision-Date: 2012-11-21 21:05+0000\n"
+"PO-Revision-Date: 2012-11-22 14:47+0000\n"
 "Last-Translator: Alexander Mackinnon Jansen <alexander.jansen@hesbynett.no>\n"
 "Language-Team: \n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2012-11-22 04:44+0000\n"
+"X-Launchpad-Export-Date: 2012-11-23 04:44+0000\n"
 "X-Generator: Launchpad (build 16293)\n"
 "X-Poedit-Country: NORWAY\n"
 "X-Poedit-Language: Norwegian\n"
@@ -1489,7 +1489,7 @@ msgid ""
 "Phobos emerges from the sun it passes through Mars' shadow and dims."
 msgstr ""
 "Phobos raser forbi Mars og dekker for sola, går forbi for så å gå tilbake og "
-"skape en delvis formørkelse (ses bare pfra den sørlige halvkula) igjen, så "
+"skape en delvis formørkelse (ses bare fra den sørlige halvkula) igjen, så "
 "dekker Mars helt for sola og Phobos, og så mens Phobos kommer bort fra sola "
 "går den gjennom Mars skygge og blir mørk."
 
@@ -6921,6 +6921,15 @@ msgid ""
 "that the source is hardly observable (or not observable at all) in the dates "
 "between Cosmical set and rise."
 msgstr ""
+"Den akroniske stigningen (eller fallet) til et objekt er når objektet går "
+"opp (eller ned) når sola går ned (eller opp).  De konkrete dataene til disse "
+"forbigåelsene kommer an på hvor observatøren befinner seg.  Datoene mellom "
+"den akroniske stigningen og fallet er de når høyden på himmellegemet pleide "
+"å være like høye når sola er under horisonten (og objektet kan observeres "
+"godt).  På den annen side skjer den kosmiske stigningen (eller fallet) når "
+"både objektet og sola stiger (eller synker) samtidig.  Det er åpenbart at "
+"kilden er vanskelig (eller umulig) å observere i løpet av den kosmiske "
+"stigningen og fallet."
 
 #: plugins/Observability/src/gui/ObservabilityDialog.cpp:106
 msgid "Largest Sun separation:"
@@ -6937,6 +6946,12 @@ msgid ""
 "at that declination. Hence, that is the 'best' night to observe a particular "
 "object."
 msgstr ""
+"Skjer når vinkelforskjellen mellom sola og himmellegemet er på sitt meste.  "
+"I de fleste tilfeller tilsvarer dette at lengdegradene til sola og objektet "
+"er ulike med 180 grader slik at sola er på motsatt side av objektet.  Når et "
+"objekt er på maksimal vinkelforskjell fra sola (planet eller stjerne), "
+"kulminerer det rundt midnatt, og i det mørkeste området av himmelen ved det "
+"fallet.  Derfor er dette den «beste» natta å observere et gitt objekt."
 
 #: plugins/Observability/src/gui/ObservabilityDialog.cpp:107
 msgid "Nights with source above horizon:"
@@ -6961,6 +6976,23 @@ msgid ""
 "planets (which will not depend on the mere input of a twilight Sun elevation "
 "by the user) will be implemented in future versions of this plugin."
 msgstr ""
+"Programmet kalkulerer områdene for datoene himmellegemet er over horisonten "
+"minst ett øyeblikk i løpet av natta.  Med «natt», menes tiden hvor sola er "
+"lavere enn i skumringen (som kan tilpasses av brukeren, se ovenfor).  Når "
+"objektene sitter fast på himmelen (eller er andre planeter), kan området for "
+"observerbare epoker dette året ha to mulige former: enten et område mellom "
+"en dato og en annen: enten et område fra én dato til en annen (f.eks. 20. "
+"jan. til 15. sep.) eller i to trinn (fra 1. jan. til en gitt dato og fra en "
+"annen dato til 31. des.).  I det første tilfellet skal den første datoen(20. "
+"jan. i vårt eksempel) være nærme den såkalte «stjerneoppgangen» og den andre "
+"datoen (21. sep. i vårt eksempel) skal være nærme den såkalte "
+"«stjernenedgangen».  I det andre tilfellet (for eksempel et område i form av "
+"1. jan. til 20. mai og 21. sep. til 31. des.), er den første datoen (20. mai "
+"i dette tilfellet) nærme stjernenedgangen og den andre (21. sep. i dette "
+"tilfellet) nærme stjerneoppgangen.  Mer nøyaktige ligninger for å beregne "
+"stjerneopp-/-nedgangen til stjerner og planeter (som ikke avhenger av "
+"brukerens oppgivelse av når det er skumring) blir integrert i senere "
+"versjoner av dette tillegget."
 
 #: plugins/Observability/src/gui/ObservabilityDialog.cpp:108
 msgid "Full Moon:"
