--- a/po/stellarium-skycultures/de.po
+++ b/po/stellarium-skycultures/de.po
@@ -10,13 +10,13 @@ msgstr ""
 "Project-Id-Version: de\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2012-11-20 09:48+0700\n"
-"PO-Revision-Date: 2012-10-28 09:43+0000\n"
+"PO-Revision-Date: 2012-11-22 06:51+0000\n"
 "Last-Translator: Alexander Wolf <Unknown>\n"
 "Language-Team: <de@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2012-11-21 04:40+0000\n"
+"X-Launchpad-Export-Date: 2012-11-23 04:45+0000\n"
 "X-Generator: Launchpad (build 16293)\n"
 
 #: nebulae/default/ngc2000names.dat:112
@@ -400,15 +400,15 @@ msgstr ""
 
 #: nebulae/default/ngc2000names.dat:230
 msgid "Perseus A"
-msgstr ""
+msgstr "Perseus A"
 
 #: nebulae/default/ngc2000names.dat:231
 msgid "Fornax A"
-msgstr ""
+msgstr "Fornax A"
 
 #: nebulae/default/ngc2000names.dat:232
 msgid "Fornax B"
-msgstr ""
+msgstr "Fornax B"
 
 #: nebulae/default/ngc2000names.dat:233
 msgid "de Mairan's nebula"
@@ -444,7 +444,7 @@ msgstr ""
 
 #: nebulae/default/ngc2000names.dat:241
 msgid "Galaxy cluster"
-msgstr ""
+msgstr "Galaxienhaufen"
 
 #: nebulae/default/ngc2000names.dat:242
 msgid "Southern Pinwheel galaxy"
