--- a/po/stellarium-skycultures/eu.po
+++ b/po/stellarium-skycultures/eu.po
@@ -8,13 +8,13 @@ msgstr ""
 "Project-Id-Version: stellarium\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2012-11-20 09:48+0700\n"
-"PO-Revision-Date: 2012-02-25 23:59+0000\n"
-"Last-Translator: Asier Iturralde Sarasola <Unknown>\n"
+"PO-Revision-Date: 2012-11-22 06:48+0000\n"
+"Last-Translator: Alexander Wolf <Unknown>\n"
 "Language-Team: Basque <eu@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2012-11-21 04:38+0000\n"
+"X-Launchpad-Export-Date: 2012-11-23 04:44+0000\n"
 "X-Generator: Launchpad (build 16293)\n"
 
 #: nebulae/default/ngc2000names.dat:112
@@ -92,7 +92,7 @@ msgstr "Kalifornia nebulosa"
 
 #: nebulae/default/ngc2000names.dat:134
 msgid "Centaurus A"
-msgstr ""
+msgstr "Centaurus A"
 
 #: nebulae/default/ngc2000names.dat:135
 msgid "Christmas Tree cluster"
@@ -163,7 +163,7 @@ msgstr "Herkules-eko kumulu handia"
 
 #: nebulae/default/ngc2000names.dat:159
 msgid "Andromeda Galaxy"
-msgstr ""
+msgstr "Andromeda galaxia"
 
 #: nebulae/default/ngc2000names.dat:160
 msgid "Great Nebula in Orion"
@@ -398,15 +398,15 @@ msgstr ""
 
 #: nebulae/default/ngc2000names.dat:230
 msgid "Perseus A"
-msgstr ""
+msgstr "Perseus A"
 
 #: nebulae/default/ngc2000names.dat:231
 msgid "Fornax A"
-msgstr ""
+msgstr "Fornax A"
 
 #: nebulae/default/ngc2000names.dat:232
 msgid "Fornax B"
-msgstr ""
+msgstr "Fornax B"
 
 #: nebulae/default/ngc2000names.dat:233
 msgid "de Mairan's nebula"
