--- a/po/stellarium-skycultures/gl.po
+++ b/po/stellarium-skycultures/gl.po
@@ -8,13 +8,13 @@ msgstr ""
 "Project-Id-Version: stellarium\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2012-11-20 09:48+0700\n"
-"PO-Revision-Date: 2012-10-28 19:39+0000\n"
-"Last-Translator: Manuel Rosales Graña <manuel.rosales@mundo-r.com>\n"
+"PO-Revision-Date: 2012-11-22 06:51+0000\n"
+"Last-Translator: Alexander Wolf <Unknown>\n"
 "Language-Team: Galician <gl@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2012-11-21 04:40+0000\n"
+"X-Launchpad-Export-Date: 2012-11-23 04:45+0000\n"
 "X-Generator: Launchpad (build 16293)\n"
 
 #: nebulae/default/ngc2000names.dat:112
@@ -398,7 +398,7 @@ msgstr ""
 
 #: nebulae/default/ngc2000names.dat:230
 msgid "Perseus A"
-msgstr ""
+msgstr "Perseo A"
 
 #: nebulae/default/ngc2000names.dat:231
 msgid "Fornax A"
