Launchpad automatic translations update.

--- a/po/stellarium-skycultures/fr.po
+++ b/po/stellarium-skycultures/fr.po
@@ -18,13 +18,13 @@ msgstr ""
 "Project-Id-Version: fr\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2012-11-20 09:48+0700\n"
-"PO-Revision-Date: 2012-11-20 21:07+0000\n"
+"PO-Revision-Date: 2012-11-25 19:40+0000\n"
 "Last-Translator: Nicolas Martignoni <Unknown>\n"
 "Language-Team: <fr@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2012-11-21 04:40+0000\n"
+"X-Launchpad-Export-Date: 2012-11-26 04:36+0000\n"
 "X-Generator: Launchpad (build 16293)\n"
 
 #: nebulae/default/ngc2000names.dat:112
@@ -3143,225 +3143,225 @@ msgstr "Enfilage de pièces"
 
 #: skycultures/korean/star_names.fab:1
 msgid "SaangSaang"
-msgstr ""
+msgstr "SaangSaang"
 
 #: skycultures/korean/star_names.fab:2 skycultures/korean/star_names.fab:4
 msgid "ChaSaang"
-msgstr ""
+msgstr "ChaSaang"
 
 #: skycultures/korean/star_names.fab:3 skycultures/korean/star_names.fab:50
 msgid "ChaJaang"
-msgstr ""
+msgstr "ChaJaang"
 
 #: skycultures/korean/star_names.fab:5
 msgid "UJangGuun"
-msgstr ""
+msgstr "UJangGuun"
 
 #: skycultures/korean/star_names.fab:6
 msgid "DaeJangGuun"
-msgstr ""
+msgstr "DaeJangGuun"
 
 #: skycultures/korean/star_names.fab:7
 msgid "JwaJangGuun"
-msgstr ""
+msgstr "JwaJangGuun"
 
 #: skycultures/korean/star_names.fab:8
 msgid "WaangRaang"
-msgstr ""
+msgstr "WaangRaang"
 
 #: skycultures/korean/star_names.fab:9 skycultures/korean/star_names.fab:10
 #: skycultures/korean/star_names.fab:11 skycultures/korean/star_names.fab:12
 msgid "CheonSaa"
-msgstr ""
+msgstr "CheonSaa"
 
 #: skycultures/korean/star_names.fab:13 skycultures/korean/star_names.fab:17
 msgid "CheonGou"
-msgstr ""
+msgstr "CheonGou"
 
 #: skycultures/korean/star_names.fab:14
 msgid "SaaGong"
-msgstr ""
+msgstr "SaaGong"
 
 #: skycultures/korean/star_names.fab:15
 msgid "CheonOok"
-msgstr ""
+msgstr "CheonOok"
 
 #: skycultures/korean/star_names.fab:16
 msgid "CheonChaang"
-msgstr ""
+msgstr "CheonChaang"
 
 #: skycultures/korean/star_names.fab:18
 msgid "Gyeong"
-msgstr ""
+msgstr "Gyeong"
 
 #: skycultures/korean/star_names.fab:19
 msgid "JwaJaangGuun"
-msgstr ""
+msgstr "JwaJaangGuun"
 
 #: skycultures/korean/star_names.fab:20
 msgid "HuuJaangGuun"
-msgstr ""
+msgstr "HuuJaangGuun"
 
 #: skycultures/korean/star_names.fab:21
 msgid "UuJaangGuun"
-msgstr ""
+msgstr "UuJaangGuun"
 
 #: skycultures/korean/star_names.fab:22
 msgid "PyeonJaangGuun"
-msgstr ""
+msgstr "PyeonJaangGuun"
 
 #: skycultures/korean/star_names.fab:23
 msgid "SaamJaangGuun"
-msgstr ""
+msgstr "SaamJaangGuun"
 
 #: skycultures/korean/star_names.fab:24
 msgid "TaeSaa"
-msgstr ""
+msgstr "TaeSaa"
 
 #: skycultures/korean/star_names.fab:25 skycultures/korean/star_names.fab:39
 msgid "BaakSaa"
-msgstr ""
+msgstr "BaakSaa"
 
 #: skycultures/korean/star_names.fab:26
 msgid "SaamGong"
-msgstr ""
+msgstr "SaamGong"
 
 #: skycultures/korean/star_names.fab:27
 msgid "JaeUu"
-msgstr ""
+msgstr "JaeUu"
 
 #: skycultures/korean/star_names.fab:28
 msgid "JaeSaa"
-msgstr ""
+msgstr "JaeSaa"
 
 #: skycultures/korean/star_names.fab:29
 msgid "YeoJuu"
-msgstr ""
+msgstr "YeoJuu"
 
 #: skycultures/korean/star_names.fab:30
 msgid "YeoEo"
-msgstr ""
+msgstr "YeoEo"
 
 #: skycultures/korean/star_names.fab:31
 msgid "TaeMin"
-msgstr ""
+msgstr "TaeMin"
 
 #: skycultures/korean/star_names.fab:32
 msgid "SouMin"
-msgstr ""
+msgstr "SouMin"
 
 #: skycultures/korean/star_names.fab:33 skycultures/korean/star_names.fab:64
 #: skycultures/korean/star_names.fab:65 skycultures/korean/star_names.fab:66
 msgid "Buuiin"
-msgstr ""
+msgstr "Buuiin"
 
 #: skycultures/korean/star_names.fab:34
 msgid "WaangBii"
-msgstr ""
+msgstr "WaangBii"
 
 #: skycultures/korean/star_names.fab:35 skycultures/korean/star_names.fab:47
 msgid "HuuGuung"
-msgstr ""
+msgstr "HuuGuung"
 
 #: skycultures/korean/star_names.fab:36
 msgid "HwangJae"
-msgstr ""
+msgstr "HwangJae"
 
 #: skycultures/korean/star_names.fab:37
 msgid "CheoSaa"
-msgstr ""
+msgstr "CheoSaa"
 
 #: skycultures/korean/star_names.fab:38
 msgid "EuiSaa"
-msgstr ""
+msgstr "EuiSaa"
 
 #: skycultures/korean/star_names.fab:40
 msgid "DaeBuu"
-msgstr ""
+msgstr "DaeBuu"
 
 #: skycultures/korean/star_names.fab:41
 msgid "SaangTae"
-msgstr ""
+msgstr "SaangTae"
 
 #: skycultures/korean/star_names.fab:42
 msgid "JuungTae"
-msgstr ""
+msgstr "JuungTae"
 
 #: skycultures/korean/star_names.fab:43
 msgid "HaaTae"
-msgstr ""
+msgstr "HaaTae"
 
 #: skycultures/korean/star_names.fab:44 skycultures/korean/star_names.fab:62
 msgid "TaeJaa"
-msgstr ""
+msgstr "TaeJaa"
 
 #: skycultures/korean/star_names.fab:45
 msgid "JaeWaang"
-msgstr ""
+msgstr "JaeWaang"
 
 #: skycultures/korean/star_names.fab:46 skycultures/korean/star_names.fab:61
 msgid "SeoJaa"
-msgstr ""
+msgstr "SeoJaa"
 
 #: skycultures/korean/star_names.fab:48
 msgid "CheonChuu"
-msgstr ""
+msgstr "CheonChuu"
 
 #: skycultures/korean/star_names.fab:49
 msgid "SaangJaang"
-msgstr ""
+msgstr "SaangJaang"
 
 #: skycultures/korean/star_names.fab:51
 msgid "TaeSaang"
-msgstr ""
+msgstr "TaeSaang"
 
 #: skycultures/korean/star_names.fab:52
 msgid "SaaJuu.DaeRii"
-msgstr ""
+msgstr "SaaJuu.DaeRii"
 
 #: skycultures/korean/star_names.fab:53
 msgid "Jeong"
-msgstr ""
+msgstr "Jeong"
 
 #: skycultures/korean/star_names.fab:54
 msgid "Beop"
-msgstr ""
+msgstr "Beop"
 
 #: skycultures/korean/star_names.fab:55
 msgid "Ryeong"
-msgstr ""
+msgstr "Ryeong"
 
 #: skycultures/korean/star_names.fab:56
 msgid "Beol"
-msgstr ""
+msgstr "Beol"
 
 #: skycultures/korean/star_names.fab:57
 msgid "Saal"
-msgstr ""
+msgstr "Saal"
 
 #: skycultures/korean/star_names.fab:58
 msgid "Wii"
-msgstr ""
+msgstr "Wii"
 
 #: skycultures/korean/star_names.fab:59
 msgid "Eung"
-msgstr ""
+msgstr "Eung"
 
 #: skycultures/korean/star_names.fab:60
 msgid "MyeongDaang"
-msgstr ""
+msgstr "MyeongDaang"
 
 #: skycultures/korean/star_names.fab:63
 msgid "Huu"
-msgstr ""
+msgstr "Huu"
 
 #: skycultures/korean/star_names.fab:67
 msgid "Biin"
-msgstr ""
+msgstr "Biin"
 
 #: skycultures/korean/star_names.fab:68 skycultures/korean/star_names.fab:69
 msgid "DaeJaang"
-msgstr ""
+msgstr "DaeJaang"
 
 #: skycultures/lakota/constellation_names.eng.fab:1
 msgid "Hand"
@@ -3437,91 +3437,91 @@ msgstr "Voile de Tainui"
 
 #: skycultures/maori/star_names.fab:1
 msgid "Matariki"
-msgstr ""
+msgstr "Matariki"
 
 #: skycultures/maori/star_names.fab:2
 msgid "Taumata-kuku"
-msgstr ""
+msgstr "Taumata-kuku"
 
 #: skycultures/maori/star_names.fab:3
 msgid "Puanga"
-msgstr ""
+msgstr "Puanga"
 
 #: skycultures/maori/star_names.fab:4
 msgid "Atutahi"
-msgstr ""
+msgstr "Atutahi"
 
 #: skycultures/maori/star_names.fab:5
 msgid "Takarua"
-msgstr ""
+msgstr "Takarua"
 
 #: skycultures/maori/star_names.fab:6
 msgid "Whakaahu"
-msgstr ""
+msgstr "Whakaahu"
 
 #: skycultures/maori/star_names.fab:7
 msgid "Puanga Hori"
-msgstr ""
+msgstr "Puanga Hori"
 
 #: skycultures/maori/star_names.fab:8
 msgid "Mariao"
-msgstr ""
+msgstr "Mariao"
 
 #: skycultures/maori/star_names.fab:9
 msgid "Ruawahia"
-msgstr ""
+msgstr "Ruawahia"
 
 #: skycultures/maori/star_names.fab:10
 msgid "Rehua"
-msgstr ""
+msgstr "Rehua"
 
 #: skycultures/maori/star_names.fab:11
 msgid "Pekehawani"
-msgstr ""
+msgstr "Pekehawani"
 
 #: skycultures/maori/star_names.fab:12
 msgid "Whakaonge-kai"
-msgstr ""
+msgstr "Whakaonge-kai"
 
 #: skycultures/maori/star_names.fab:13
 msgid "Whanui"
-msgstr ""
+msgstr "Whanui"
 
 #: skycultures/maori/star_names.fab:14
 msgid "Poutu-te-Rangi"
-msgstr ""
+msgstr "Poutu-te-Rangi"
 
 #: skycultures/maori/star_names.fab:15
 msgid "Pipiri"
-msgstr ""
+msgstr "Pipiri"
 
 #: skycultures/maori/star_names.fab:16
 msgid "Turu"
-msgstr ""
+msgstr "Turu"
 
 #: skycultures/maori/star_names.fab:17
 msgid "Tupua-nuku"
-msgstr ""
+msgstr "Tupua-nuku"
 
 #: skycultures/maori/star_names.fab:18
 msgid "Tupua-rangi"
-msgstr ""
+msgstr "Tupua-rangi"
 
 #: skycultures/maori/star_names.fab:19
 msgid "Ururangi"
-msgstr ""
+msgstr "Ururangi"
 
 #: skycultures/maori/star_names.fab:20
 msgid "Wai-puna-a-rangi"
-msgstr ""
+msgstr "Wai-puna-a-rangi"
 
 #: skycultures/maori/star_names.fab:21
 msgid "Waiti"
-msgstr ""
+msgstr "Waiti"
 
 #: skycultures/maori/star_names.fab:22
 msgid "Waita"
-msgstr ""
+msgstr "Waita"
 
 #: skycultures/navajo/constellation_names.eng.fab:1
 msgid "Revolving Male"
@@ -3633,124 +3633,124 @@ msgstr "Dauphin"
 
 #: skycultures/polynesian/star_names.fab:1
 msgid "Hokulei"
-msgstr ""
+msgstr "Hokulei"
 
 #: skycultures/polynesian/star_names.fab:2
 msgid "Nana-mua"
-msgstr ""
+msgstr "Nana-mua"
 
 #: skycultures/polynesian/star_names.fab:3
 msgid "Nana-hope"
-msgstr ""
+msgstr "Nana-hope"
 
 #: skycultures/polynesian/star_names.fab:4
 msgid "Puana"
-msgstr ""
+msgstr "Puana"
 
 #: skycultures/polynesian/star_names.fab:5
 msgid "A'a"
-msgstr ""
+msgstr "A'a"
 
 #: skycultures/polynesian/star_names.fab:6
 msgid "Puana-kau"
-msgstr ""
+msgstr "Puana-kau"
 
 #: skycultures/polynesian/star_names.fab:7
 #: skycultures/polynesian/star_names.fab:19
 msgid "Pu'uhonua"
-msgstr ""
+msgstr "Pu'uhonua"
 
 #: skycultures/polynesian/star_names.fab:8
 msgid "Kaulua-koko"
-msgstr ""
+msgstr "Kaulua-koko"
 
 #: skycultures/polynesian/star_names.fab:9
 msgid "Hokupa'a"
-msgstr ""
+msgstr "Hokupa'a"
 
 #: skycultures/polynesian/star_names.fab:10
 msgid "Hokule'a"
-msgstr ""
+msgstr "Hokule'a"
 
 #: skycultures/polynesian/star_names.fab:11
 msgid "Hiki-analia"
-msgstr ""
+msgstr "Hiki-analia"
 
 #: skycultures/polynesian/star_names.fab:12
 msgid "Holopuni"
-msgstr ""
+msgstr "Holopuni"
 
 #: skycultures/polynesian/star_names.fab:13
 msgid "Hawaiki"
-msgstr ""
+msgstr "Hawaiki"
 
 #: skycultures/polynesian/star_names.fab:14
 msgid "Humu"
-msgstr ""
+msgstr "Humu"
 
 #: skycultures/polynesian/star_names.fab:15
 msgid "Keoe"
-msgstr ""
+msgstr "Keoe"
 
 #: skycultures/polynesian/star_names.fab:16
 msgid "Hoku'ula"
-msgstr ""
+msgstr "Hoku'ula"
 
 #: skycultures/polynesian/star_names.fab:17
 msgid "Lehua-Kona"
-msgstr ""
+msgstr "Lehua-Kona"
 
 #: skycultures/polynesian/star_names.fab:18
 msgid "Ke ali'i o kona i ka lewa"
-msgstr ""
+msgstr "Ke ali'i o kona i ka lewa"
 
 #: skycultures/polynesian/star_names.fab:20
 msgid "Hiku-kahi"
-msgstr ""
+msgstr "Hiku-kahi"
 
 #: skycultures/polynesian/star_names.fab:21
 msgid "Hiku-lua"
-msgstr ""
+msgstr "Hiku-lua"
 
 #: skycultures/polynesian/star_names.fab:22
 msgid "Hiku-kolu"
-msgstr ""
+msgstr "Hiku-kolu"
 
 #: skycultures/polynesian/star_names.fab:23
 msgid "Hiku-ha"
-msgstr ""
+msgstr "Hiku-ha"
 
 #: skycultures/polynesian/star_names.fab:24
 msgid "Hiku-lima"
-msgstr ""
+msgstr "Hiku-lima"
 
 #: skycultures/polynesian/star_names.fab:25
 msgid "Hiku-ono"
-msgstr ""
+msgstr "Hiku-ono"
 
 #: skycultures/polynesian/star_names.fab:26
 msgid "Hiku-pau"
-msgstr ""
+msgstr "Hiku-pau"
 
 #: skycultures/polynesian/star_names.fab:27
 msgid "Kaulia"
-msgstr ""
+msgstr "Kaulia"
 
 #: skycultures/polynesian/star_names.fab:28
 msgid "Mole Honua"
-msgstr ""
+msgstr "Mole Honua"
 
 #: skycultures/polynesian/star_names.fab:29
 msgid "Ka-maile-mua"
-msgstr ""
+msgstr "Ka-maile-mua"
 
 #: skycultures/polynesian/star_names.fab:30
 msgid "Ka-maile-hope"
-msgstr ""
+msgstr "Ka-maile-hope"
 
 #: skycultures/polynesian/star_names.fab:31
 msgid "Ka Maka"
-msgstr ""
+msgstr "Ka Maka"
 
 #: skycultures/sami/constellation_names.eng.fab:1
 msgid "Sarva the Elk"
@@ -3822,7 +3822,7 @@ msgstr "Queixada da Anta (Tapi'i rainhyka)"
 
 #: skycultures/tupi/star_names.fab:1 skycultures/tupi/star_names.fab:2
 msgid "Quira-Rupia"
-msgstr ""
+msgstr "Quira-Rupia"
 
 #: skycultures/western/constellation_names.eng.fab:1
 msgid "Aquila"
