--- a/po/stellarium/si.po
+++ b/po/stellarium/si.po
@@ -8,14 +8,14 @@ msgstr ""
 "Project-Id-Version: stellarium\n"
 "Report-Msgid-Bugs-To: FULL NAME <EMAIL@ADDRESS>\n"
 "POT-Creation-Date: 2012-11-24 19:14+0700\n"
-"PO-Revision-Date: 2012-11-20 00:13+0000\n"
+"PO-Revision-Date: 2012-11-26 17:15+0000\n"
 "Last-Translator: Dileepa Rajapaksa(දිලීප රාජපක්ෂ) <Unknown>\n"
 "Language-Team: Sinhalese <si@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2012-11-25 05:19+0000\n"
-"X-Generator: Launchpad (build 16293)\n"
+"X-Launchpad-Export-Date: 2012-11-27 05:20+0000\n"
+"X-Generator: Launchpad (build 16309)\n"
 "X-Poedit-Country: SRI LANKA\n"
 "X-Poedit-Language: Estonian\n"
 
@@ -1663,7 +1663,7 @@ msgstr ""
 
 #: src/translations.h:300
 msgid "China"
-msgstr ""
+msgstr "චීනය"
 
 #: src/translations.h:301
 msgid "Colombia"
